# AIMHi_2

./: .gitignore  .replit  AI_REPORT_IMPLEMENTATION_COMPLETE.md  AI_REPORT_RELIABILITY_IMPROVEMENTS.md  AUTOMATIC_SCHEMA_RECOVERY_COMPLETE.md  BACKUP_RESTORE_IMPLEMENTATION.md  CANDIDATE_JOB_ASSIGNMENT_ARCHITECTURE.md  CODE_REVIEW_REPORT.md  COMPLETE_COST_OPTIMIZATION.md  COMPREHENSIVE_SCHEMA_STRATEGY.md  COMPREHENSIVE_TABLE_EXPANSION.md  CRITICAL_CODE_REVIEW_AI_REPORTS.md  DATABASE_LOGGING_SUMMARY.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_PRESERVATION_FIX.md  DATA_LOSS_PREVENTION_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_UPDATE_FIXED.md  DEPLOYMENT_VERIFICATION.md  DOWNLOAD_CHECKLIST.md  EXECUTION_INSTRUCTIONS.md  Executive_Presentation.html  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_STARTUP_VALIDATION_COMPLETE.md  FRONTEND_BACKEND_INTEGRATION_REVIEW.md  GENERIC_SOLUTION_ANALYSIS.md  IMPROVED_STARTUP_VALIDATION.md  INTEGRATION_COMPLETE.md  LOCAL_DEVELOPMENT_GUIDE.md  LOCAL_INSTALLATION_GUIDE.md  MANUAL_EXECUTION_GUIDE.md  MULTIPLE_COLUMN_TEST_GUIDE.md  OPENAI_COST_OPTIMIZATION.md  PREPROCESSING_OPTIMIZATION.md  PRIORITY_FIXES_STATUS.md  QUICK_START_GUIDE.md  README.md  REPLIT_COST_OPTIMIZATION.md  REPLIT_INTEGRATION_GUIDE.md  REPORT_DATABASE_INTEGRATION_FIX.md  (+75 more)
attached_assets/: Pasted--2025-08-05-12-21-42-19-0a99c178-User-Initializing-call-context-on-app-startup-2025-08-05-1754376878219_1754376878221.txt  Pasted--3-40-00-PM-express-Initializing-consolidated-Node-js-backend-3-40-00-1753632351073_1753632351075.txt  (+70 more)
data/: .fresh-production-required  development.db  (+8 more)
(+179 files in other folders)
